# ChangeLog for app-editors/emacs
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs/ChangeLog,v 1.599 2013/09/19 06:48:28 ulm Exp $

  19 Sep 2013; Ulrich Müller <ulm@gentoo.org> -emacs-24.3-r1.ebuild:
  Remove old.

  21 Aug 2013; Ulrich Müller <ulm@gentoo.org> emacs-18.59-r8.ebuild:
  Add ncurses[abi_x86_32] as alternative dependency on amd64.

  14 Aug 2013; Ulrich Müller <ulm@gentoo.org> emacs-24.3-r2.ebuild:
  Don't call configure with --program-transform-name, upstream bug #15091.
  Revert to moving the executable instead.

  06 Aug 2013; Agostino Sarubbo <ago@gentoo.org> emacs-24.3-r2.ebuild:
  Stable for s390, wrt bug #476702

  06 Aug 2013; Ulrich Müller <ulm@gentoo.org> emacs-18.59-r8.ebuild:
  Require USE=development for emul-linux-x86-baselibs, needed for pkg-config.
  Call epatch_user.

  04 Aug 2013; Agostino Sarubbo <ago@gentoo.org> emacs-24.3-r2.ebuild:
  Stable for ia64, wrt bug #476702

  03 Aug 2013; Ulrich Müller <ulm@gentoo.org> emacs-18.59-r8.ebuild:
  Use pkg-config to detect ncurses, bug 457530.

  03 Aug 2013; Agostino Sarubbo <ago@gentoo.org> emacs-24.3-r2.ebuild:
  Stable for sparc, wrt bug #476702

  02 Aug 2013; Ulrich Müller <ulm@gentoo.org> emacs-21.4-r24.ebuild,
  emacs-22.3-r10.ebuild, emacs-23.4-r6.ebuild, emacs-24.2-r1.ebuild,
  emacs-24.3-r1.ebuild, emacs-24.3-r2.ebuild:
  Update dependency on virtual/jpeg.

  14 Jul 2013; Agostino Sarubbo <ago@gentoo.org> emacs-24.3-r2.ebuild:
  Stable for arm, wrt bug #476702

  14 Jul 2013; Agostino Sarubbo <ago@gentoo.org> emacs-24.3-r2.ebuild:
  Stable for alpha, wrt bug #476702

  13 Jul 2013; Agostino Sarubbo <ago@gentoo.org> emacs-24.3-r2.ebuild:
  Stable for x86, wrt bug #476702

  13 Jul 2013; Agostino Sarubbo <ago@gentoo.org> emacs-24.3-r2.ebuild:
  Stable for amd64, wrt bug #476702

  13 Jul 2013; Agostino Sarubbo <ago@gentoo.org> emacs-24.3-r2.ebuild:
  Stable for ppc64, wrt bug #476702
