@@ -16,24 +16,25 @@ DIST emacs-24.3-patches-3.tar.xz 2108 SHA256 225e49dea51f913abf0f98800451a2c61ac
 DIST emacs-24.3.tar.xz 35565352 SHA256 70aa2942e9ae689ed17eddedfca5027c364ffbcc8b59968b1645e935f4c7058d SHA512 a1300fa10a9fba2db9735db3d01382bcda89ceec033976c4622796dfdf6d2748ed5fa73edf229182b368190c8acbf706810dd5f344542d2c0d294154bc2d0ca9 WHIRLPOOL 687ad4c7d69b41884bf28269bdea1808e03cdcec5a5218d0bac23c07cca3ced341ef98b4d5892149e2dbe899774a5e60edde9931d6c0fe41687995f530fb61d8
 DIST leim-21.4.tar.gz 3291433 SHA256 db24946985dd644bfed18815d6e991dad27f8ab1fd5823dd6dc4eb8dcd04333b SHA512 c361996f7a3fcc550e7af30a7df3f692071ded2c9dce998e72f537b0e8011f319cfae1742d0be463608a86852046cba23037a29c3ecdcbaf5976807e1d1a1e2c WHIRLPOOL d7f25d5d491f323b80609567ce5cbcb5f20109cdd4671e9972c79279a3ca5338bbf67d35ae8f0bc627bc06917f545d71ab1f66a09c647f47ddaea26772bfc5c1
 EBUILD emacs-18.59-r8.ebuild 4714 SHA256 515f85f1b755e6465e75e1529a35eac70cb43615c2c90eae43a99cded14b65be SHA512 c1d089095bbe92370f2605b95d8a9f963a7c0417f18d198f1c8b186bf3becc8d88031705f6aa839e862b9bf3727a068b98bab6ca72a82dc77e9a05117f1ea810 WHIRLPOOL bfd8918d558fcd5d7645a793e7d706c50d6632d6b872d3b95f8e1957d3e8e88f891121b262b067f6453e8294a17f54d234b57c8cc1eb8ac5636b59efab4bbf19
+EBUILD emacs-18.59-r9.ebuild 4749 SHA256 d5d786fb280a0e955200bde1dd03f1c9adcc02fe8f8db7a2730118c64281f008 SHA512 d0ff9a0c849376a9283d7bd971ab2becaf350123ab284dcf4833906af8542c119c82b9d3b0038870b197f963aa613032daeb0c430e2ffa61036d18a0ca18578e WHIRLPOOL 6408af0e91c6f993abf44063a14a99d244a17e7ca5d311ce332105a2630832be7ddfb7ace0f39be529393124d36a125cc09b23503512f93cbdface763ce64aaf
 EBUILD emacs-21.4-r24.ebuild 5286 SHA256 564082d9d96421342ec92f1d303ea07fb44ccf4c10aaf0d746a4fe8466ce7f74 SHA512 dd34062685d7c81e080d1ecc31de6c2da5ff6bf1e8f86794724c4edfad5dcd325e6f10e90f96a4700f48186bb4c887a962322a97ef15f57544aaab3250885b26 WHIRLPOOL d1baaf141b4833d23f12628b21b168f624a3f448b05103f123034744bd3de45d209369d6c3b91f038a31511e19990eeb0c1ac02ddb6da28123080726a579195a
 EBUILD emacs-22.3-r10.ebuild 7738 SHA256 5a219fa5f170f33347f07f4fcd8f52e8290bb3cd0c0be2c4abdadefd311511f3 SHA512 35a1450f8cbaeee5a14b7a8fb5e428e473b86e3b31481fad0144168a07b5f3158c9b2c3e68e244f1c14b8b044b1d0736d66e249239482ca3aa4b8be4ad8cfdbd WHIRLPOOL ace481ef8a33d517cb153545fd310761658d592da4232ab8d58c79e4c42bb742436a44fbc99ad91f472b9586bd62c20549347cbca7418c133a7a5b92ee66ba0b
 EBUILD emacs-23.4-r6.ebuild 10664 SHA256 23f281f4a84f70d0af8505fe55c06db51f2cb37dba030946afdff6a188660383 SHA512 1b38b8063103b5f1e2ad44a3731cc496a118eaa4d9151b5119ee84279fcd701ef45c8f2abc154ecb0f029633fdfa12103e43145fb5b043d735315b6c51eaa747 WHIRLPOOL 0e99ea5838535c69f2ac72957c557051ff86a49bab69afd51a62e46d141d72807982450c5bcf174cf4ae957abcaf8e2be3bb15ace17cb5f510af78d328ff4f5e
 EBUILD emacs-24.2-r1.ebuild 11000 SHA256 c482a3c0e91ffc14241a7576fbe99342831f5aeb11ae8f714bb239b9cb416b7e SHA512 93ddb550c0fdc801206588f7009401305877c93e7c03ab72a53c8b44763dc5b078f272e10631949a189476a12677d6e2c0f6f69c793f93efff80607591bd74e4 WHIRLPOOL 3d058a2fc9d74e247f9b90028e8b0e7976a3de28ba51252e4da311761d5196094cf0295d020f4d02c9caa14a35f2535fdd36495694c73b10a4e9c0c766da070d
 EBUILD emacs-24.3-r2.ebuild 10650 SHA256 df393015777ce3bda50f05d1c5a7f78687b9a2e428a19f0fc826d38814f8f8cc SHA512 d61735653b1004a1433632c522b61dfece209d8e97e3632af5632e865287a850794127493e0395d7f1b57486f07e6efe90a7735a5d28fd7d60f70bfbd8543344 WHIRLPOOL edb594efeca7e1e996c05b892b636ae5c4c35a3edae17fc34a509284cd32817458d8a470cc4d37558df9b96c9741f95cd73818d549aa415abb8bdaaf3e68e31e
-MISC ChangeLog 82842 SHA256 4ce8f2d3a149c44a35d86ff282d63dea12d4e824c4546ea2f66beeb3e3e4e684 SHA512 75f8f51b9bf4efbe2781217515377363f01d06a291081008e38c2614b16bb464936e0cbfb6c117c0462950c4149dca9c2a5c69fd63f5d854f4e1cacf4562992a WHIRLPOOL 463c098fbb6a5cc33d0a885bfdaaac7565d1321f83021e26cee342fb03dcbccf134590cd57a0d4456b3fa0e9496bff9e7351eb49803fe101f371b527fc0259de
+MISC ChangeLog 83015 SHA256 9c7dcc4356049dc9f1d7933b2ba952e6942cf5bff47f3309d1b0beb53c34632d SHA512 7d8f6bea3a077562fa728813a7a554e7781b02c257f84faf34c68c2c07485c68e83f589f61cc5abbb4a0c59908eb015a094156ad7e17bcf94d34361c794a2aeb WHIRLPOOL 86feefb960b1efb5a561cfcde7401e4cbadd5bfd8451367972fce51b3739e305c0149f68497b500e9b6460cea7f863e76fb17804a6d18c66710c6d1c749c8b16
 MISC metadata.xml 2554 SHA256 94ab92fa323dcb5747564f95bfd1e2a3eca2511cd3e95b48e4ca95ea40ac8238 SHA512 24207b2227969f1d87126bbca5046f10f848f22584fa9c2a23a88ebb854e4344cc564902be1e6e1b86ae8b9da416f65ccf6172d4595633d6063f78893f9ae0c1 WHIRLPOOL db5cb9f87e4804152bf0a41807497733f4a4c382dd634b2ba7cc41fb6bda07191adca7e68b11dcac79d681b3b17dc9a4d629d0b8d152cd8c148883e754385155
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.21 (GNU/Linux)
 
-iQGcBAEBCAAGBQJSOp5eAAoJEJQzkH1pP7W4bwIL/3FKuV0sctdSP1zrPljUEHfQ
-yFZp1meVyTXBwysb7uFGVqDdnEGvZD8EL1s8r25b8u0x5CbWizoWI5SdmtObczR8
-ZiF0iSneLx4zO5+h698usNIjQgiJXC7FayD5qANDcwQU703SX/sBkzZP0M2EHxNs
-7uKTnFS5/c/NdAu/OUu3RUU1MdXuo+f/8cLelBr+tePpg+FinzIifnLv1xC0ak7s
-YII+RwGdRQB+jzlxJISp2y/T3JNQjCFXvGZItbC7l/nE7WDCACfFBHEBpjoHAPb1
-1qdocVnRFfJcpy1X3Rw7EYHu4vaoI0yEJJ9b7iUBYbVJSWrrsmFY3JcHA7UUXl4p
-R9HoHgrW3dh1NWP/PZNz2LX7M8xU3Ce2KqhSPm8+1grPkRycwX6nnsaZtrLaeCde
-uVRr7rKIpGazYNakAMOziF6xHEN0CHpusuePaqbp7qUijGzgBbDQE02fy7v2CI4h
-bMvRwh+ycEysYwzkyJk10WQgTANf33kzUuMbs7rm1g==
-=NtHr
+iQGcBAEBCAAGBQJSTTdiAAoJEJQzkH1pP7W4j7UL+gO72khv2IuE25LvaYvu8NCk
+oCKgD2slUDPncApG9YGC+WXxxMUZ27EBwOSbRv1YF8qkiDBpNtx1srQ6y6lUZ2H0
+vwzoXrS8QbKi4Z4yN9K/KBTV1p6fKmMe1eo/5eD/nx75b0LwOFwZR+lbMP3D4rLI
+nnLknpM0BqBTproiPAb7OOD3vU/8koRpeNLVGKgWUPcfKq2GLdhw1rGoWQN/1zRp
+tRnfCI2zkEe8rZt0IhkDNJgVV2UO5E0I2IT51ZXrNcV8j65VPxlrFlhVz4hY9p2g
+QdmdarqWHzxF4rlrrz+5tVSgdbEHaZRY9mEmBjXzEc1JJMLwRI2RH2mlEDIef+IM
+NP9jBo1wQzRaosbJlHO2b54hqUIUU16Ofi8IcBGVwjfyNaGIFnUx71f2TOo4ub/Z
+KUVHHqdDk00ChJm/glkm546GNJPvnrgJWiTGUzZtTSOnV5SmctVm0G45EsCGLva7
+nsuJ3NaRqjxPcywbY9r+v+/+WGWGjB+vCdZs0G0GYg==
+=OcGB
 -----END PGP SIGNATURE-----
