@@ -10,18 +10,18 @@ AUX sdlmametools-0.149-system-lua.patch 851 SHA256 2ca1875b4425f1136a29003cdf542
 DIST mame0148s.zip 33822494 SHA256 78d8a68ba53934fdfc895f450c08682dada81f7ec3e74a98fb042539506d9321 SHA512 a520115e2e82b2da3200ffa1fa56f668f95c3e26a927bcdb30a34e73053e55d26a6a6c1ec95eae1237bce1d2d0cd276b84466705fd5f53ac77827d06ea04bc03 WHIRLPOOL c6de71c198396977475110ab5840b7eaa6e5074519adffc286dd539ab916ea951fa1c307218b0d144cdc8aeeb096216106a3c21a6d53b42c04dc75e8103be04a
 DIST mame0149s.zip 35160585 SHA256 0e41b5773bea217d3ca04002903ac5ef569e6f5b67c05c72496d2cd7993b0a6b SHA512 4b8bd72e93f71fdb52c643776ecefb87fe605effe3f8c1724156cf7fafb8107330d92914eb14208a170cd5a0ee2775e7ea8d8edd0b525a35bbb0d5514172c1c3 WHIRLPOOL c5821ffc0f640e93986cd88f9e530be36e5ba0405a5dbc69a5021c828248dc74541340d5d9d49ece19635b5239bbaeeeb93bad2800fc46e9f441d8ffd3751ca5
 DIST sdlmame0148u1_diff.zip 3386949 SHA256 27378d09e50f31ca0dd4f39df4c474016671946657eb7af9ea5aa0ffbae1d9bb SHA512 f62aa8ebfc3cfa96d2fd5e58c921cc2adfbe3704a745ef49bc247060ecd3333ecc12e1a3add810c6237f3f7a1946cf1b9d46e6d72aeb87baffebadb933de44de WHIRLPOOL 550f2e777363f307b8e56b4ec31f4852abe89434af5ce596bd6e6023f35a728e4078033b1edc4b302e0cf50fa646a190ec02be9329127379405aec2e9b591531
-EBUILD sdlmametools-0.148_p1.ebuild 2711 SHA256 8d749c459981b652e9001bbb70527ea03cd11e767fe22690254b1447306ec3a6 SHA512 9ceeb882e847efa82d4646036398b54353a312ab3242925a2989167983c5f091327d70688b2cfc6d84b852bab143ad6f59643ef9fc0701b8aa8f45e03bbfb1e2 WHIRLPOOL 0a2ce53d7f300b046dd53a46208c5de2a3852064cb84357d2c3ee26c5647d4ccf9cda7128d121d06a0d389af531b78df2c17c3371d3701824378c4779c7bd2e4
+EBUILD sdlmametools-0.148_p1.ebuild 2708 SHA256 8d52468b8b2d05819f3529b2b70704f8b147f17a5a2a29f8fee26b9531a37e48 SHA512 5500c2387d5a1eaefc0183337e9729233844b60ea1ee6b569e050fcec12b59bef695bb97a549be7d9b497236dc1ee3e17acb1245069f581108ea929d791f2d19 WHIRLPOOL 07f3f0602a051ec3e9e649d94708cb2c5b2d857c1bb7a0bc8d744061d2d414402784fe5349ed2b76adfbcdb6d65e1f3dfc0da2466ca6d4215775cccd94cf0337
 EBUILD sdlmametools-0.149.ebuild 2761 SHA256 a6906b4868b763278755863194b8e481003fc71c5a1b1365a4ad96c12c2445ef SHA512 100a8c4f70583816a89550db7c4a981b5a841359b1e08e78c6ef88bc9b13b8fc03c3908cb85f3f86f89b199625923331649b7ed77da80f01dc2165e81632396d WHIRLPOOL 0c990705eabc389cdce1ac20773544dc351d4e44ba7082e0dcad7b0a3995b6131d4a963a0b2c363ad688d57cd985f89c26a0a94e53850a503f25561f2ba59a47
-MISC ChangeLog 829 SHA256 733553817f0c55dde92c82751da7deee08d577c3a7d5179a634f3014c561160f SHA512 aba5c615beae4e5256c743683507d7e724e369faa65d28bc6a8d616651cf0d6a549e2a9cbf5a6a05edd626ac4b651916cf85a72936d8b79cbe445b6a14074913 WHIRLPOOL fac6b4b32a2e690e8ee2734e95045dfb958d1c82fbf68cf4f142aa1c7d42ac0aa4b382b7a956a549855398046a781107c6f6ce47f5c33b698ef9d578692a2729
+MISC ChangeLog 941 SHA256 81d8197717f791f719660e9ea87c275c64df3313aa2a51d586c6195b453c0d82 SHA512 7f7388ba26ccf56bfe1a5e4c21c9310fb2c6c91ac0e9cb683d3b05f29975fa75106d683e87b25fa11651baeb0ebcb260ac28b7dba3be544600b622c7d523434e WHIRLPOOL 822a3dbfb79c21d289484ff0e07284b6d17504a6e1f79db3e2a5e000117c800efa0c3811c67eb6b29e7a9001ab5bf54ca1b15f85a05ea8987c04052db6519796
 MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRyuneAAoJEFpvPKfnPDWzv6cIAJiWOIdJTVXkefY+iIJlM2te
-d8ikEsNRbw9NOZ9N3YMq2hl1E+2lKGoGqtsKQvhGuo0QXDkn4R56rluCC4cdRTsQ
-t1wjF2tq51KfKT8RwRk3rJ30WCH4kcjFR2b9CHZk1p/OL+sGXPqYdEWXRFbjZBLr
-4/1ddYnlkLAZIoenRxs5KJDgO/kvWEKIfY+Th6FeuHEjXkU9sx+USCmPO0Z4SAYs
-uggxPcCQBW//bsS1sQa9E5U0fyBOmMPh2wx8nxqXZ2XpPtSmdpws3+q5pRNaOO6E
-cYmMlMChUdEG5gg6/+UcxDkSSGLUXN3EF1K6RtsrI5c0b7bWsmYBypswrXlAkgE=
-=0dxh
+iQEcBAEBCAAGBQJSTTLpAAoJEA2sAkrWKOU2vu0H/3AbV6hWp0I22JIDXg8HWWiu
+eZnl6SR8CORJQ9Vpl6Arxj+hWyd5dilQpJ0/l+xZdrDI3jcJBv+xgnbF1dRR8uim
+4tNYk05vHt4AchVnuH5cjXqLydzEz6RT6rTRe0Y5n2qPQVSiPXF9ZVivqutOdUHy
+ie+f8U+IQ1tfkkTOFb1luYztDOonZcTMeyzRUmJDgU8AGjDWahY7dGVKN20mlVPT
+VXXYK8KkMM0FG9pQNfkPdgsYkSn/Ipa0XfO9noDDuyEqDBv9xKuZMSVRqzMVC5RT
+7uvZ3vvq4m9Lxxzln0JN3PVwNBZldhqyfRJ+XrwdziU2lWtARToWF+RplVu7waQ=
+=Vr4s
 -----END PGP SIGNATURE-----
