@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install postinst postrm preinst prepare
+DEPEND=sys-libs/ncurses >=app-admin/eselect-emacs-1.2 amd64? ( sys-libs/ncurses[abi_x86_x32(-)?] !abi_x86_x32? ( sys-libs/ncurses[abi_x86_32(-)?] ) ) virtual/pkgconfig
+DESCRIPTION=The extensible self-documenting text editor
+EAPI=5
+HOMEPAGE=http://www.gnu.org/software/emacs/
+IUSE=+abi_x86_32 abi_x86_x32
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-1+ GPL-2+ BSD
+RDEPEND=sys-libs/ncurses >=app-admin/eselect-emacs-1.2 amd64? ( sys-libs/ncurses[abi_x86_x32(-)?] !abi_x86_x32? ( sys-libs/ncurses[abi_x86_32(-)?] ) )
+REQUIRED_USE=amd64? ( || ( abi_x86_32 abi_x86_x32 ) )
+SLOT=18
+SRC_URI=mirror://gnu/old-gnu/emacs/emacs-18.59.tar.gz ftp://ftp.splode.com/pub/users/friedman/emacs/emacs-18.59-linux22x-elf-glibc21.diff.gz mirror://gentoo/emacs-18.59-patches-8.tar.bz2
+_eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	flag-o-matic	46e34faf3660a9fa3d374b042130fb20	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	3e30ef439a720915f8f4fd4fe75f704c	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=2178501c8f9d7485cbf9683d049daaed
