@@ -4,11 +4,11 @@ DESCRIPTION=Set of development tools shared between sdlmame and sdlmess
 EAPI=5
 HOMEPAGE=http://mamedev.org/
 IUSE=X debug
-KEYWORDS=~amd64 ~ppc ~x86
+KEYWORDS=amd64 ~ppc ~x86
 LICENSE=XMAME
 RDEPEND=dev-libs/expat media-libs/flac >=media-libs/libsdl-1.2.10 media-libs/sdl-ttf sys-libs/zlib X? ( x11-libs/libX11 )
 REQUIRED_USE=debug? ( X )
 SLOT=0
 SRC_URI=http://dev.gentoo.org/~hasufell/distfiles/sdlmame0148u1_diff.zip http://dev.gentoo.org/~hasufell/distfiles/mame0148s.zip
 _eclasses_=base	ec46b36a6f6fd1d0b505a33e0b74e413	eutils	4878e7f88afc0ba0866ac112190b0fd4	flag-o-matic	46e34faf3660a9fa3d374b042130fb20	games	0fb7637597e0869f6c8be79b11d0135a	multilib	892e597faee02a5b94eb02ab512e7622	python-any-r1	06dec86544a782db0a4fd8a90092565d	python-utils-r1	3b392f7373bcc74b7c97ae0acd9ec0e6	toolchain-funcs	3e30ef439a720915f8f4fd4fe75f704c	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=c79e7eff219f1d7eed19fc335bbceda9
+_md5_=32ee96ff46f139384b9a20d85688b3cb
