@@ -1,6 +1,9 @@
 # ChangeLog for games-emulation/sdlmametools
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-emulation/sdlmametools/ChangeLog,v 1.2 2013/06/26 13:17:17 hasufell Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-emulation/sdlmametools/ChangeLog,v 1.3 2013/10/03 09:02:40 nimiux Exp $
+
+  03 Oct 2013; Chema Alonso <nimiux@gentoo.org> sdlmametools-0.148_p1.ebuild:
+  Stable for amd64 wrt bug #486686
 
 *sdlmametools-0.149 (26 Jun 2013)
 
